<resources>
    <string name="app_name">MapChat</string>
    <string name="hint_password_again">Επανάληψη Κωδικού</string>
    <string name="hint_password">Κωδικός</string>
    <string name="hint_username">Όνομα Χρήστη</string>
    <string name="btn_login">ΕΙΣΟΔΟΣ</string>
    <string name="btn_register">ΕΓΓΡΑΦΗ</string>
    <string name="btn_link_to_register">Δεν είστε μέλος; Εγγραφείτε τώρα.</string>
    <string name="btn_link_to_login">Έχετε ήδη εγγραφεί; Συνδεθείτε τώρα</string>
    <drawable name="Blue">#b0e0e6</drawable>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#cccccc</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="darkgrey">#606060</drawable>
    <string name="main_empty_list">Δεν υπάρχουν πρόσφατα μηνύματα, γράψτε ένα νέο.</string>
    <string name="clearMessages">Διαγραφή Μηνυμάτων</string>
    <string name="title_activity_map">Χάρτης</string>
    <string name="eggegramenoi">Εγγεγραμμένοι Χρήστες</string>
    <string name="protropi_sinomilias">Θέλετε να συνομιλήσετε\n με τον/την %1$s;</string>
    <string name="menuitem_refresh">Ανανέωση</string>
    <string name="menuitem_play">Έναρξη Ανανεώσεων</string>
    <string name="menuitem_pause">Παύση Ανανεώσεων</string>
    <string name="map">Χάρτης</string>
    <string name="progress_login">Πιστοποίηση Χρήστη&#8230;</string>
    <string name="progress_register">Εγγραφή Χρήστη&#8230;</string>
    <string name="alert_loading">Φορτώνονται οι Χρήστες&#8230;</string>
    <string name="msg_no_user_found">Δεν υπάρχουν χρήστες για chat!</string>
    <string name="type_msg">Γράψτε εδώ</string>
    <string name="error_intro">"Παρακαλώ "</string>
    <string name="error_blank_username">εισάγετε όνομα χρήστη</string>
    <string name="error_blank_password">εισάγετε κωδικό</string>
    <string name="error_mismatched_passwords">εισάγετε τον ίδιο κωδικό ξανά</string>
    <string name="error_join">", και "</string>
    <string name="error_end">.</string>
    <string name="prompt_radius">Παρακαλώ εισάγετε την ακτίνα\n(σε μέτρα) στην οποία θέλετε\nνα βρείτε τους φίλους σας!</string>
</resources>
